--- a/src/index.css
+++ b/src/index.css
@@ -25,12 +25,15 @@ body{
   color: var(--color-gray);
 }
 .container{
-  max-width: 450px;
-  width: 100%;
+  max-width: 400px;
   margin-inline: auto;
   padding: 2rem 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .App{
+  width: 100%;
   min-height: 100vh;
   display: flex;
   justify-content: center;
